<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ith.android.bignerdranch.com.hangman.MainMenuActivity">

    <TextView
        android:id="@+id/tv_hangman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="60sp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btn_play_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hangman"
        android:text="@string/btn_play_game"
        android:onClick="onClickBtnPlayGame"/>

    <Button
        android:id="@+id/btn_resume_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_play_game"
        android:text="@string/btn_resume_game"
        android:onClick="onClickBtnResumeGame"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_resume_game"
        android:text="@string/btn_about"
        android:onClick="onClickBtnAbout"/>
</RelativeLayout>
