<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ith.android.bignerdranch.com.hangman.ResultActivity">

    <TextView
        android:id="@+id/tv_game_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_game_result"
        android:text="@string/tv_result_word"/>
    <TextView
        android:id="@+id/tv_guesses_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_word"
        android:text="@string/tv_result_guesses_left"/>
    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_menu"
        android:layout_below="@id/tv_guesses_left"
        android:onClick="onClickBtnMainMenu"/>

</RelativeLayout>
